@@ -44,13 +44,19 @@ OTHER
 		CHANGES IN R VERSION 2.7.0 patched
 
 
-BUG FIXES
-
-    o	Sys.getenv() could read incorrectly non-ASCII values.
+NEW FEATURES
 
     o	Rgui now accepts Unicode characters invalid in the locale when
 	pasted in and converts them to \uxxxx sequences before passing
 	to R.
+
+    o	The Save as | Postscript ... file selection box now offers
+	*.eps (default) and *.ps file selections.
+
+
+BUG FIXES
+
+    o	Sys.getenv() could read incorrectly non-ASCII values.
 
     o	The vertical scrollbar on the data editor/viewer now works
 	when scrolling beyond 65535 rows.  (PR#11291)
